# ard-lib-tests

./: .gitignore  CMakeLists.txt  ard-lib-tests.cbp  ardLibTests.workspace  main.cpp
.codelite/: ardLibTests.session  ardLibTests.tags  cppcheck.list  refactoring.db
IrSensorCluster/: CMakeLists.txt  Makefile  ir_sensor_cluster.cbp  ir_sensor_cluster.workspace  ir_sensor_project.project
IrSensorCluster/.codelite/: ir_sensor_cluster.tags
IrSensorCluster/src/: CMakeLists.txt  COMMO_MESSAGING.h  CommoController.cpp  CommoController.h  IrClusterStructs.h  IrSensorCluster.cpp  IrSensorCluster.h  IrSensorController.cpp  IrSensorController.h  Makefile  commo_messaging.h
IrSensorCluster/src/commando/: CMakeLists.txt  Makefile  commando.cbp  commando.cpp  commando.h
IrSensorCluster/tests/: CMakeLists.txt  Makefile  ir_sensor_cluster_tests  tests_ir_sensor_cluster.cpp
IrSensorCluster/tests/fakes/: CMakeLists.txt  Makefile
IrSensorCluster/tests/fakes/avr/: WString.h  io.h  pgmspace.h
IrSensorCluster/tests/fakes/libraries/: IrReceiver.cpp  IrReceiver.h  Makefile  decode_results.cpp  decode_results.h
IrSensorCluster/tests/mocks_gen/: CMakeLists.txt  GeneratedMocks.cpp  GeneratedMocks.h  Makefile
IrSensorCluster/tests/mocks_man/: Makefile
IrSensorCluster/tests/tools/: .sconsign.dblite
SpeedControl/: CMakeLists.txt
SpeedControl/src/: CMakeLists.txt
SpeedControl/tests/: CMakeLists.txt
SpeedControl/tests/fakes/libraries/: CMakeLists.txt  IrReceiver.cpp  IrReceiver.h
SpeedControl/tests/mocks_man/: CMakeLists.txt  ManualMocks.cpp  ManualMocks.h
examples/example_blink_led/tests/: CMakeLists.txt
examples/example_blink_led/tests/fakes/: CMakeLists.txt
robot1/: DataStructures.project  HelloWorld  Makefile  build.sh  robot1.cbp  run_tests.sh
robot1/DataStructures/: CMakeLists.txt  Makefile
robot1/DataStructures/src/: CMakeLists.txt  Makefile
robot1/DataStructures/tests/: CMakeLists.txt  Makefile  tests_decode_results.cpp  tests_ir_sensor_cluster.cpp
robot1/DataStructures/tests/fakes/: Arduino.h  Makefile
robot1/DataStructures/tests/mocks_gen/: CMakeLists.txt  Makefile  mocks_generated.cpp  mocks_generated.h
robot1/DataStructures/tests/mocks_man/: CMakeLists.txt  Makefile  mocks_manual.cpp  mocks_manual.h
